--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^4.18.3",
-    "google-meet": "^1.0.0"
+    "google-meet": "^1.0.0",
+    "googleapis": "^134.0.0"
   }
 }
