--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,7 +1,30 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.2",
     "express": "^4.18.3",
     "google-meet": "^1.0.0",
-    "googleapis": "^134.0.0"
-  }
+    "googleapis": "^134.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.0",
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "name": "medimind-backend",
+  "description": "MediMind is a medical consultancy application designed to support end-users through online consultations. It provides a range of features including patient registration, doctor registration, storing patient and doctor details, categorizing diseases based on symptoms, managing patient appointments, and displaying doctor availability.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
