--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^3.0.3",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.2"
   },
   "name": "medimind-backend",
   "version": "1.0.0",
