--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,7 @@
   },
   "name": "medimind-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
