--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "google-auth-library": "^9.7.0",
     "googleapis": "^134.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
@@ -18,7 +19,7 @@
   },
   "name": "medimind-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
