--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@google-apps/meet": "^0.1.1",
+    "@google-cloud/local-auth": "^2.1.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.2",
-    "express": "^4.19.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "google-auth-library": "^9.7.0",
+    "google-meet-api": "^1.0.0",
     "googleapis": "^134.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
