--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@google-apps/meet": "^0.1.1",
     "@google-cloud/local-auth": "^2.1.0",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "google-auth-library": "^9.7.0",
@@ -18,11 +20,13 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "uuid": "^9.0.1"
   },
   "name": "medimind-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
