--- a/Backend/.env
+++ b/Backend/.env
@@ -6,5 +6,5 @@ FOLDER_NAME =
 CLOUDINARY_CLOUD_NAME = "dcrj8xm3h"
 CLOUDINARY_API_KEY = "129393727777934"
 CLOUDINARY_API_SECRET = "UECAjKkTBjn61eG2gZCjPxl7V-g" 
-RAZORPAY_KEY_ID = "rzp_test_fiIwmRET6CApc2"
-RAZORPAY_KEY_SECRET = "YAEUthsup8SijNs3iveeVlL1"
+RAZORPAY_KEY_ID = "rzp_test_Au3bh7uy56GXOh"
+RAZORPAY_KEY_SECRET = "b7qPcJY7tNoKU6jCSt9FQFIg"
