--- a/Backend/.env
+++ b/Backend/.env
@@ -8,3 +8,5 @@ CLOUDINARY_API_KEY = "129393727777934"
 CLOUDINARY_API_SECRET = "UECAjKkTBjn61eG2gZCjPxl7V-g" 
 RAZORPAY_KEY_ID = "rzp_test_Au3bh7uy56GXOh"
 RAZORPAY_KEY_SECRET = "b7qPcJY7tNoKU6jCSt9FQFIg"
+CALENDAR_CODE="4/0AeaYSHAvSfpV7QlaQPGlz4CP5c3yaQsfu1g4Y-yXTgdVw_sLlJTQM1YhAQUSYApd63sfYA"
+CALENDAR_TOKEN=""
