--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
     "@google-cloud/local-auth": "^2.1.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
@@ -15,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "otp-generator": "^4.0.1",
